@@ -27,8 +27,11 @@ use ANSTE::Exceptions::InvalidType;
 use ANSTE::Scenario::Scenario;
 use ANSTE::Virtualizer::Virtualizer;
 
-
+use threads;
+use threads::shared;
 use Error qw(:try);
+
+my $lockMount : shared;
 
 # Class: Creator
 #
@@ -103,10 +106,13 @@ sub createImage
         print "done.\n";
     }
 
-    print "[$name] Mounting image... ";
-    $cmd->mount()
-        or throw ANSTE::Exceptions::Error('Error mounting image.');
-    print "done.\n";
+    {
+        lock ($lockMount);
+        print "[$name] Mounting image... ";
+        $cmd->mount()
+            or throw ANSTE::Exceptions::Error('Error mounting image.');
+        print "done.\n";
+    };
 
     try {
         print "[$name] Copying base files... ";
@@ -179,7 +185,5 @@ sub createImage
 
     return 1;
 }
-
-
 
 1;
